--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-CLOUDINARY_CLOUD_NAME = "ddwapzxdc",
-  CLOUDINARY_API_KEY = "622526376528128",
- CLOUDINARY_SECRET_KEY = "hjuus8X3RczPHUlpy0RW46RtRFc",
-  CLOUDINARY_Gmail = "lelam09062002@gmail.com",
-  CLOUDINARY_Password = "12345678Aa@"
+DB_HOST = "bvvkoy5zhzrua05wkttv-mysql.services.clever-cloud.com",
+  DB_USERNAME = "ut6htjauqzone7em",
+ DB_PASSWORD = "FpJ0bMOxPyCOYP9HrhK1",
+  DB_DBNAME = "bvvkoy5zhzrua05wkttv",
+
